--- a/main.css
+++ b/main.css
@@ -1,17 +1,27 @@
 html{
     scroll-behavior: smooth;
 }
+*{
+    margin:0;
+    padding:0;
+}
 /*/////////////////
 NAV BAR
 ////////////////*/
-nav>ul>li{
+nav{
+    margin-top:20px;
+}
+.mainMenu>ul>li{
     list-style-type: none;
     padding: 0 10px;
     font-family: "Open Sans";  
     color:white;
     font-size:20px;
 }
-nav>ul{
+.closeMenu, .openMenu{
+    display:none;
+}
+.mainMenu>ul{
     display: flex;
     justify-content: center;
     padding-left:0;
@@ -28,6 +38,43 @@ a:visited{
 a:hover{
     color:rgb(255, 213, 61);
 }
+    @media screen and (max-width: 480px){
+         nav{
+            position: fixed;
+            width: 100%; 
+            margin:0;
+            background:rgb(255, 213, 61);
+            height:40px;
+        } 
+        .mainMenu>ul{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            padding-left:0;
+            border:none;
+        }
+        .mainMenu{
+            max-height:300px;
+            position:absolute;
+            display:block;
+            background:rgb(255, 213, 61);
+            width:100%;
+            display:none;
+        }
+        .closeMenu{
+            display: block;
+        }
+        .openMenu{
+            display: block;
+            position:absolute;
+            right: 30px;
+            margin-top: 10px;
+            text-align: center;
+            width:50px;
+            height:auto;
+        }
+    }
 
 /*/////////////////
 MAIN
@@ -44,12 +91,12 @@ MAIN
     url("patio4.png");
     background-size: cover;
 } 
-
 .main-section>div{
     display:flex;
     flex-direction: column;
     align-items: center;
     color:white;
+    margin-top:5%;
 }
 h1{
     font-size: 60px;
@@ -91,12 +138,38 @@ h1{
 .main-section>div>span{
     font-size:18px;
     font-family: "Open Sans";
+    margin-top: 2%;
 }
+    @media screen and (max-width: 480px){
+        .main-section{
+            height:470px;
+        }
+        h1{
+            font-size: 2.4em;
+            margin: 0 15px;
+            text-align: center;
+        }    
+        .main-section>div>span{
+            text-align: center;
+            margin: 5px 50px;
+            font-size: .9em;
+        }
 
+    }
+        @media screen and (max-width: 720px){
+            h1{
+                text-align: center;
+            }
+        }
+            @media screen and (max-width: 890px){
+                h1{
+                    font-size: 3em;
+                }
+        }
 
-/*//////////
+/*////////////////////
 SECTION 2
-///////////*/
+////////////////////*/
 .section2{
     height:600px;
     display:flex;
@@ -121,13 +194,49 @@ SECTION 2
     justify-content: center;
 }
 .S2word{
-    padding-right:50px;
+    padding-right:70px;
 }
+    @media screen and (max-width: 640px){
+        .section2{
+            height:auto;
+            width:auto;
+        }
+        .section2>div{
+            display:flex;
+            flex-direction: column;
+            height:500px;
+            height:auto;
+            padding:0;
+        }
+        .section2>div>div{
+            width:auto;
+            padding: 0 60px;
+        }
+        .S2image{
+            height:150px;
+            text-align: center;
+        }
+        .S2word{
+            margin-bottom: 30px;
+            height:auto;
+            font-size: .8em;
+            text-align: center;
+        }
+    }
+        @media screen and (max-width: 640px){
+            .S2word{
+                font-size: .8em;
+            }
+        }
+            @media screen and (max-width: 840px){
+                .S2word{
+                    font-size: .9em;
+                }
+            }
+            
 
-
-
-/*/////////////////
-SECTION 3
+/*/////////////////////           
+            SECTION 3
 /////////////////////*/
 
 .section3{
@@ -147,6 +256,9 @@ h2{
     color:rgb(255,213,61);
     font-weight:600;
     font-size:20px;
+}
+.section3>p{
+    margin-top: 3%;
 }
 .patio,.interior{
     --gap:16px;
@@ -175,7 +287,12 @@ h2{
 .image-grid-col-4{
     grid-column: span 3;
 }
-
+    @media screen and (max-width: 640px){
+        .patio, .interior{
+            --num-cols:2;
+            --row-height: 250px;
+        }
+    }
 
 
 /*//////////////////////
@@ -194,6 +311,14 @@ SECTION 4
     padding-top:10%;
     color:white;
 }
+    @media screen and (max-width: 550px){
+        .section4{
+            height:300px;
+        }
+        .section4>div{
+            font-size: 2em;
+        }
+    }
 
 /*//////////////////////
 FOOTER
@@ -207,6 +332,7 @@ footer{
 }
 .firstdiv{
     width:40%;
+    margin-top: 2%;
 }
 .seconddiv{
     width:40%;
@@ -232,18 +358,20 @@ i{
     font-size: 20px;
     margin: 0 5px;
     color:white;
+    margin-top: 1%;
 }
 i:hover{
     color:rgb(255, 213, 61);
 }
 footer>div>span{
-    padding:0 0 0 150px;
+    padding-left:30%;
 }
 .footer-list{
     display:flex;
     justify-content: flex-end;
     text-align: right;
     padding-right:40px;
+    margin-top: 1%;
 }
 .footer-list>ul>li{
     list-style-type:none;
@@ -251,58 +379,38 @@ footer>div>span{
     border-right:rgb(255, 213, 61) solid;
     padding-right:5px;
 }
-
-@media screen and (max-width: 480px){
-    h1{
-        font-size: 3em;
-        margin: 0 15px;
-        border: red solid;
-        text-align: center;
-    }    
-    .main-section>div>span{
-        text-align: center;
-        margin: 5px 50px;
-        border:yellow solid;
+    @media screen and (max-width: 480px){
+        .footer{
+            height:auto;
+            width:auto;
+        }
+        .firstdiv>span{
+            padding:0;
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .firstdiv{
+            display:flex;
+            flex-direction: column;
+            align-items: center;
+            font-size:.8em;
+        } 
+        .firstdiv>span>i{
+            font-size: 1.3em;
+            margin-top:5px;
+        }
+        .seconddiv{
+            text-align: left;
+            font-size: .7em;
+            padding:0;
+            margin: 0 20px 10px 0;
+            width:auto;
+        }
+        .footer-list{
+            font-size: .8em;
+            text-align: center;
+        }
+        .footer-list>ul>li{
+            border:none;
+        }    
     }
-    .section2>div{
-        display:flex;
-        flex-direction: column;
-        height:500px;
-        border:purple solid;
-    }
-    .S2image{
-        height:200px;
-        border:green solid;
-    }
-    .S2word{
-        margin-left:0;
-        border: red solid;
-        width:450px;
-        height:100%;
-        padding:0;
-        align-items: none;
-    }
-    .patio, .interior{
-        --num-cols:2;
-        --row-height: 250px;
-    }
-    .section4{
-        height:300px;
-    }
-    .section4>div{
-        font-size: 2em;
-    }
-    .footer{
-        height:auto;
-    }
-    .firstdiv>span{
-        padding:0;
-        text-align: center;
-        margin-bottom: 30px;
-    }
-    .firstdiv{
-        display:flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
