--- a/main.css
+++ b/main.css
@@ -54,8 +54,8 @@ a:hover{
         .mainMenu>ul{
             display: flex;
             flex-direction: column;
-            width:auto;
-            padding-left:0;
+            width:100%;
+            text-align: center;
         }
         .mainMenu{
             max-height:300px;
@@ -144,12 +144,25 @@ h1{
     font-family: "Open Sans";
     margin-top: 2%;
 }
-    @media screen and (max-width: 480px){
+@media screen and (max-width: 350px){
+    h1{
+        font-size: 2em;
+        text-align: center;
+        margin-top: 20%;
+    }
+    .main-section>div>span{
+        text-align: center;
+        font-size: 1em;
+        margin: 5px 30px;
+        width:auto;
+    }
+}
+    @media (min-width:350px) and (max-width: 480px){
         .main-section{
             height:470px;
         }
         h1{
-            font-size: 2.4em;
+            font-size: 2.7em;
             margin: 0 15px;
             text-align: center;
         }    
@@ -160,16 +173,17 @@ h1{
         }
 
     }
-        @media screen and (max-width: 720px){
+        @media (min-width:480px) and (max-width: 720px){
             h1{
                 text-align: center;
             }
         }
-            @media screen and (max-width: 890px){
+            @media (min-width:720px) and (max-width: 890px){
                 h1{
                     font-size: 3em;
                 }
         }
+        
 
 /*////////////////////
 SECTION 2
@@ -195,12 +209,8 @@ SECTION 2
     margin:0 15%;
     text-align: center;
 }
-@media screen and (max-width: 480px){
-    .S2word{
-        font-size: .5em;
-        margin:0;
-    }
-}
+
+
     @media screen and (max-width: 640px){
         .section2{
             height:auto;
@@ -236,7 +246,18 @@ SECTION 2
                 font-size: .9em;
             }
         }
-            
+        @media screen and (max-width: 480px){
+            .S2word{
+                margin:1% 3% 1% 3%;
+                padding:0;
+                display:flex;
+                flex-direction: row;
+                text-align: center;
+            }
+            .section2{
+                height:auto;
+            }
+        }   
 
 /*/////////////////////           
             SECTION 3
@@ -347,10 +368,16 @@ SECTION 5   CONTACT US
     flex-direction: column;
     align-items: center;
     background-color: #FFD53D;
+    text-align: center;
 }
 .section5>div>div{
     font-weight: 700;
     margin-top:1%
+}
+@media screen and (max-width: 425px){
+    .section5>div{
+        padding: 3% 5% 0 5%;
+    }
 }
 @media screen and (max-width: 520px){
     .section5>div{
@@ -455,5 +482,10 @@ footer>div>span{
         @media screen and (max-width: 595px){
             .firstdiv{
                 font-size: .9em;
+            }
+        }
+        @media  screen and (max-width:340px){
+            .firstdiv, .seconddiv, .footer-list{
+                font-size: 12px;
             }
         }
