--- a/main.css
+++ b/main.css
@@ -162,7 +162,7 @@ h1{
             height:470px;
         }
         h1{
-            font-size: 2.7em;
+            font-size: 2.5em;
             margin: 0 15px;
             text-align: center;
         }    
@@ -311,12 +311,22 @@ h2{
 .image-grid-col-4{
     grid-column: span 3;
 }
-    @media screen and (max-width: 640px){
+@media screen and (max-width: 520px){
+    .patio, .interior{
+        --num-cols:2;
+        --row-height: auto;
+    }
+    .patio>img, .interior>img{
+        object-fit: contain;
+        height: auto;
+}    
+@media (min-width:520px) and (max-width: 640px){
         .patio, .interior{
             --num-cols:2;
             --row-height: 250px;
         }
     }
+    
 
 
 /*//////////////////////
